# de-rag

./: .gitignore  LICENSE  README.md  plan.txt  pyproject.toml
derag/: __init__.py  cli.py  config.py  node.py
derag/api/: __init__.py  middleware.py  models.py  server.py
derag/bridges/: __init__.py
derag/crypto/: __init__.py  envelope.py  keys.py  searchable.py
derag/mol_bridge/: __init__.py
derag/network/: __init__.py  peer.py  protocol.py
derag/query/: __init__.py  engine.py
derag/storage/: __init__.py  local_store.py  shard_manager.py  vector_index.py
tests/: conftest.py  test_api.py  test_crypto.py
